force-app/main/default/objects/Bulk_Record_Upload_Process__mdt/Bulk_Record_Upload_Process__mdt.object-meta.xml
<CustomObject>
    <description
  >Defines one administrator-approved CSV upload, including its Salesforce object, operation, security requirements, processing limits, and retention.</description>
    <label>Bulk Record Upload Process</label>
    <pluralLabel>Bulk Record Upload Processes</pluralLabel>
</CustomObject>