force-app/main/default/objects/Bulk_Record_Upload_Process__mdt/fields/ConfigurationVersion__c.field-meta.xml
<CustomField>
  <fullName>ConfigurationVersion__c</fullName>
  <defaultValue>1</defaultValue>
  <description
  >Identifies the configuration format used to validate this process.</description>
  <inlineHelpText>Use 1 for the current configuration format.</inlineHelpText>
  <label>Configuration Version</label>
  <precision>2</precision>
  <required>true</required>
  <scale>0</scale>
  <type>Number</type>
</CustomField>