force-app/main/default/objects/Bulk_Record_Upload_Process__mdt/fields/ContextDisplayFields__c.field-meta.xml
<CustomField>
    <fullName>ContextDisplayFields__c</fullName>
    <description
  >Comma-separated host object field API names shown for each record picker result. The first entry is the primary field; the rest are additional fields. Blank defaults to the host object's name field.</description>
    <inlineHelpText
  >Enter readable field API names separated by commas, primary field first. Leave blank to show only the name field.</inlineHelpText>
    <label>Context Display Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>