force-app/main/default/objects/Bulk_Record_Upload_Process__mdt/fields/ContextFilterCriteria__c.field-meta.xml
<CustomField>
    <fullName>ContextFilterCriteria__c</fullName>
    <description
  >Structured eligibility filter for the parent record, enforced both in the picker and server-side. One condition per line: FieldApiName:Operator:Value. Operators are =, !=, or IN. Lines combine with AND.</description>
    <inlineHelpText
  >Enter one condition per line as FieldApiName:Operator:Value. Operators are =, !=, and IN (comma-separated values). Example: Industry:=:Technology</inlineHelpText>
    <label>Context Filter Criteria</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>