force-app/main/default/objects/Bulk_Record_Upload_Process__mdt/fields/ContextSearchFields__c.field-meta.xml
<CustomField>
    <fullName>ContextSearchFields__c</fullName>
    <description
  >Comma-separated host object field API names the record picker searches. The first entry is the primary field; the rest are additional fields. Blank defaults to the host object's name field.</description>
    <inlineHelpText
  >Enter searchable field API names separated by commas, primary field first. Leave blank to search only the name field.</inlineHelpText>
    <label>Context Search Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>