force-app/main/default/objects/Bulk_Record_Upload_Process__mdt/fields/HostObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>HostObjectApiName__c</fullName>
    <description
  >Names the Schema-validated object whose record page can supply the parent record.</description>
    <inlineHelpText
  >Example: Account for a process that imports Contacts for the current Account.</inlineHelpText>
    <label>Record Page Object API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>