force-app/main/default/objects/Bulk_Record_Upload_Process__mdt/fields/IconName__c.field-meta.xml
<CustomField>
    <fullName>IconName__c</fullName>
    <description>SLDS icon displayed beside the upload title.</description>
    <inlineHelpText
  >Use category:name format, for example utility:upload or standard:contact.</inlineHelpText>
    <label>Title Icon Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>