force-app/main/default/objects/Bulk_Record_Upload_Process__mdt/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <description
  >Process-specific guidance displayed below the header divider.</description>
    <inlineHelpText
  >Supports paragraphs and lists using p, ul, ol, and li HTML tags.</inlineHelpText>
    <label>Instructions</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>