force-app/main/default/objects/Bulk_Record_Upload_Process__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
  <fullName>IsActive__c</fullName>
  <defaultValue>false</defaultValue>
  <description
  >Controls whether users can select or run this upload process.</description>
  <inlineHelpText
  >Select only after the process, fields, permissions, and limits have been verified.</inlineHelpText>
  <label>Available to Users</label>
  <type>Checkbox</type>
</CustomField>