force-app/main/default/objects/Bulk_Record_Upload_Process__mdt/fields/ObjectApiName__c.field-meta.xml
<CustomField>
  <fullName>ObjectApiName__c</fullName>
  <description
  >Identifies the Salesforce object whose records this process creates, updates, upserts, or deletes.</description>
  <inlineHelpText
  >Enter an allowed object API name, such as Account or Project__c.</inlineHelpText>
  <label>Salesforce Object API Name</label>
  <length>255</length>
  <required>true</required>
  <type>Text</type>
</CustomField>