force-app/main/default/objects/Bulk_Record_Upload_Process__mdt/fields/Operation__c.field-meta.xml
<CustomField>
  <fullName>Operation__c</fullName>
  <description
  >Selects the approved record operation performed by this upload process.</description>
  <inlineHelpText
  >Choose Insert, Update, Upsert, or Delete. Delete requires separate delete access.</inlineHelpText>
  <label>Upload Operation</label>
  <required>true</required>
  <type>Picklist</type>
  <valueSet>
    <restricted>true</restricted>
    <valueSetDefinition>
      <value>
        <fullName>INSERT</fullName>
        <default>true</default>
        <label>Insert</label>
      </value>
      <value>
        <fullName>UPDATE</fullName>
        <label>Update</label>
      </value>
      <value>
        <fullName>UPSERT</fullName>
        <label>Upsert</label>
      </value>
      <value>
        <fullName>DELETE</fullName>
        <label>Delete</label>
      </value>
    </valueSetDefinition>
  </valueSet>
</CustomField>