force-app/main/default/objects/Bulk_Record_Upload_Process__mdt/fields/PostProcessingAction__c.field-meta.xml
<CustomField><fullName
  >PostProcessingAction__c</fullName><description
  >Trusted registry key for an action invoked after bounded persistence completes.</description><inlineHelpText
  >Leave blank for no action. Registered actions receive safe results and identifiers, never raw CSV content.</inlineHelpText><label
  >Post-Processing Action</label><length>80</length><required
  >false</required><type>Text</type></CustomField>