force-app/main/default/objects/Bulk_Record_Upload_Process__mdt/fields/PreviewPermissionApiName__c.field-meta.xml
<CustomField>
  <fullName>PreviewPermissionApiName__c</fullName>
  <description
  >Optionally requires another approved Custom Permission before users can preview this process.</description>
  <inlineHelpText
  >Leave blank for standard preview access, or enter an approved Custom Permission API name.</inlineHelpText>
  <label>Additional Preview Permission</label>
  <length>80</length>
  <type>Text</type>
</CustomField>