force-app/main/default/objects/Bulk_Record_Upload_Process__mdt/fields/ProcessingHandler__c.field-meta.xml
<CustomField>
  <fullName>ProcessingHandler__c</fullName>
  <description
  >Identifies the registered processing handler used after validation.</description>
  <inlineHelpText
  >Use STANDARD_V1 unless this process requires a documented custom handler.</inlineHelpText>
  <label>Processing Handler</label>
  <length>80</length>
  <required>true</required>
  <type>Text</type>
</CustomField>