force-app/main/default/objects/Bulk_Record_Upload_Process__mdt/fields/ProcessingMode__c.field-meta.xml
<CustomField><fullName
  >ProcessingMode__c</fullName><description
  >Selects standard package DML or a code-reviewed custom Apex processor.</description><inlineHelpText
  >Use Standard DML unless a reviewed Apex processor is registered for this process.</inlineHelpText><label
  >Processing Mode</label><required>false</required><type
  >Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition
    ><sorted>false</sorted><value><fullName>STANDARD_DML</fullName><default
        >true</default><label>Standard DML</label></value><value><fullName
        >CUSTOM_APEX</fullName><default>false</default><label
        >Custom Apex</label></value></valueSetDefinition></valueSet></CustomField>