force-app/main/default/objects/Bulk_Record_Upload_Process__mdt/fields/ProcessorKey__c.field-meta.xml
<CustomField><fullName
  >ProcessorKey__c</fullName><description
  >Trusted registry key for the Apex processor that owns persistence for one bounded chunk.</description><inlineHelpText
  >Enter only a processor key registered in package or reviewed subscriber Apex. Never enter a class name.</inlineHelpText><label
  >Custom Processor Key</label><length>80</length><required
  >false</required><type>Text</type></CustomField>