force-app/main/default/objects/Bulk_Record_Upload_Process__mdt/fields/RecordContextAction__c.field-meta.xml
<CustomField>
    <fullName>RecordContextAction__c</fullName>
    <description
  >Controls whether the current Lightning record is ignored, applied when available, or required as the parent of uploaded records.</description>
    <inlineHelpText
  >Use Require Parent for a record-page-only upload and Use When Available when the same process can also run outside a record page.</inlineHelpText>
    <label>Record Context Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>NONE</fullName><default>true</default><label
        >Do Not Use Record Context</label></value>
            <value><fullName>DEFAULT_PARENT</fullName><default
        >false</default><label>Use Parent When Available</label></value>
            <value><fullName>REQUIRE_PARENT</fullName><default
        >false</default><label>Require Parent Record</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>