force-app/main/default/objects/Bulk_Record_Upload_Process__mdt/fields/RecordContextFieldApiName__c.field-meta.xml
<CustomField>
    <fullName>RecordContextFieldApiName__c</fullName>
    <description
  >Names the Schema-validated relationship field populated from the current record page.</description>
    <inlineHelpText
  >Example: AccountId when importing Contacts from an Account record page.</inlineHelpText>
    <label>Parent Relationship Field API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>