force-app/main/default/objects/Bulk_Record_Upload_Process__mdt/fields/RecordContextSource__c.field-meta.xml
<CustomField>
    <fullName>RecordContextSource__c</fullName>
    <description
  >Controls where the parent record comes from when Record Context Action is not Do Not Use Record Context.</description>
    <inlineHelpText
  >Page uses only the host record page. User Choice also shows a record picker when no page context is present; the page always wins when both are available.</inlineHelpText>
    <label>Record Context Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>PAGE</fullName><default>true</default><label
        >Page</label></value>
            <value><fullName>USER_CHOICE</fullName><default
        >false</default><label>User Choice</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>