force-app/main/default/objects/Bulk_Record_Upload_Process__mdt/fields/RetentionDays__c.field-meta.xml
<CustomField>
  <fullName>RetentionDays__c</fullName>
  <defaultValue>90</defaultValue>
  <description
  >Controls how long upload history and result files remain before cleanup.</description>
  <inlineHelpText
  >Enter 7–365 days. Archiving does not extend retention.</inlineHelpText>
  <label>History Retention Days</label>
  <precision>3</precision>
  <required>true</required>
  <scale>0</scale>
  <type>Number</type>
</CustomField>