force-app/main/default/objects/Bulk_Record_Upload_Process__mdt/fields/RowsPerBatch__c.field-meta.xml
<CustomField>
  <fullName>RowsPerBatch__c</fullName>
  <defaultValue>100</defaultValue>
  <description
  >Controls how many CSV rows are processed in each asynchronous chunk.</description>
  <inlineHelpText
  >Enter 25–200. Use 100 unless target-object automation requires a smaller batch.</inlineHelpText>
  <label>Rows per Batch</label>
  <precision>3</precision>
  <required>true</required>
  <scale>0</scale>
  <type>Number</type>
</CustomField>