force-app/main/default/objects/Bulk_Record_Upload_Process__mdt/fields/Subtitle__c.field-meta.xml
<CustomField>
    <fullName>Subtitle__c</fullName>
    <description
  >Short explanatory text displayed directly below the upload title.</description>
    <inlineHelpText>Keep this to one concise sentence.</inlineHelpText>
    <label>Subtitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>